# zhackathon

./: .gitignore  README.md  manage.py  migrate.sh  pyproject.toml  run.sh
scripts/: festival_seeding.py
zhackathon/: admin.py  apps.py  asgi.py  filters.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
zhackathon/fixtures/: festival.json
zhackathon/migrations/: 0001_initial.py  0002_alter_comment_author_alter_comment_festival_and_more.py  0002_alter_festival_code_postal_commune_and_more.py  0003_alter_comment_author_alter_comment_festival_and_more.py
